'view-details-label-issue-2-2' :: On order sumary view details label misalign on tablet

--- a/app/design/frontend/Magento/luma/Magento_Checkout/web/css/source/module/_minicart.less
+++ b/app/design/frontend/Magento/luma/Magento_Checkout/web/css/source/module/_minicart.less
@@ -299,11 +299,11 @@
                 &:extend(.abs-toggling-title all);
                 &:after {
                     .lib-css(color, @color-gray56);
-                    margin: 0 0 0 @indent__xs;
+                    margin: 0 0 0 4px;
                     position: static;
                 }
                 border: 0;
-                padding: 0 @indent__xl @indent__xs 0;
+                padding: 0 0 @indent__xs 0;
             }
 
             .active {
